<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_information"
            android:title="@string/Info" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_menu_prods"
            android:title="@string/Productos" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/Contacto" />
    </group>
</menu>